--- a/jobs/bbs/templates/bbs_ctl.erb
+++ b/jobs/bbs/templates/bbs_ctl.erb
@@ -96,6 +96,7 @@ case $1 in
       -listenAddress=<%= p("diego.bbs.listen_addr") %> \
       -logLevel=<%= p("diego.bbs.log_level") %> \
       -requireSSL=<%= p("diego.bbs.require_ssl") %> \
+      -dbDSN='<%= p("diego.bbs.db_dsn") %>' \
       <% if_p("diego.bbs.desired_lrp_creation_timeout") do |value| %> \
         -desiredLRPCreationTimeout=<%= value %> \
       <% end %> \
