--- a/jobs/rep/templates/rep_ctl.erb
+++ b/jobs/rep/templates/rep_ctl.erb
@@ -3,11 +3,9 @@
 RUN_DIR=/var/vcap/sys/run/rep
 LOG_DIR=/var/vcap/sys/log/rep
 CONF_DIR=/var/vcap/jobs/rep/config
-PIDFILE=$RUN_DIR/rep.pid
 
 DATA_DIR=/var/vcap/data/executor
 CACHE_DIR=<%= p("diego.executor.cache_path") %>
-TMP_DIR=$DATA_DIR/tmp
 
 source /var/vcap/packages/pid_utils/pid_utils.sh
 
@@ -26,7 +24,18 @@ source /var/vcap/packages/pid_utils/pid_utils.sh
 case $1 in
 
   start)
-    pid_guard $PIDFILE "rep"
+    index=$2
+    job_name="rep-${index}"
+    cell_id=<%= spec.job.name %>-<%= spec.index %>-$index
+    if [ -z ${index} ]; then
+      index=0
+      job_name="rep"
+      cell_id=<%= spec.job.name %>-<%= spec.index %>
+    fi
+
+    PIDFILE=$RUN_DIR/${job_name}.pid
+
+    pid_guard $PIDFILE ${job_name}
 
     mkdir -p $RUN_DIR
     chown -R vcap:vcap $RUN_DIR
@@ -36,9 +45,6 @@ case $1 in
 
     mkdir -p $DATA_DIR
     chown -R vcap:vcap $DATA_DIR
-
-    mkdir -p $TMP_DIR
-    chown -R vcap:vcap $TMP_DIR
 
     mkdir -p $CACHE_DIR
     chown -R vcap:vcap $CACHE_DIR
@@ -75,6 +81,12 @@ case $1 in
     # Work around for GOLANG 1.5.3 DNS bug
     export GODEBUG=netdns=cgo
 
+    LISTEN_PORT=1800
+    DEBUG_PORT=17008
+    TMP_DIR=$DATA_DIR/tmp-$job_name
+
+    mkdir -p $TMP_DIR
+    chown -R vcap:vcap $TMP_DIR
 
     chpst -u vcap:vcap /var/vcap/packages/rep/bin/rep ${bbs_sec_flags} \
       -bbsAddress=${bbs_api_url} \
@@ -86,11 +98,11 @@ case $1 in
       <% end %> \
       -dropsondePort=<%= p("diego.rep.dropsonde_port") %> \
       -consulCluster=http://127.0.0.1:8500 \
-      -debugAddr=<%= p("diego.rep.debug_addr") %> \
-      -listenAddr=<%= p("diego.rep.listen_addr") %> \
+      -debugAddr=0.0.0.0:$(( $DEBUG_PORT + $index )) \
+      -listenAddr=0.0.0.0:$(( $LISTEN_PORT + $index )) \
       <%= p("diego.rep.preloaded_rootfses").map { |rootfs| "-preloadedRootFS #{rootfs}" }.join(" ") %> \
       <%= p("diego.rep.rootfs_providers").map { |provider| "-rootFSProvider #{provider}" }.join(" ") %> \
-      -cellID=<%= spec.job.name %>-<%= spec.index %> \
+      -cellID=$cell_id \
       -zone=<%= p("diego.rep.zone") %> \
       -pollingInterval=<%= "#{p("diego.rep.polling_interval_in_seconds")}s" %> \
       -evacuationPollingInterval=<%= "#{p("diego.rep.evacuation_polling_interval_in_seconds")}s" %> \
@@ -135,14 +147,14 @@ case $1 in
       <% if_p("diego.executor.post_setup_hook") do |value| %> \
         -postSetupHook=<%= Shellwords.shellescape(value) %> \
       <% end %> \
-      2>> $LOG_DIR/rep.stderr.log \
-      1> >(tee -a $LOG_DIR/rep.stdout.log | logger -t vcap.rep) &
+      2>> $LOG_DIR/$job_name.stderr.log \
+      1> >(tee -a $LOG_DIR/$job_name.stdout.log | logger -t vcap.$job_name) &
 
     pid=$!
 
     set +e
 
-    address=<%= p("diego.rep.listen_addr").sub(/^0\.0\.0\.0:/, "localhost:") %>
+    address=localhost:$LISTEN_PORT
     start=`date +%s`
     # wait up to 25 seconds (monit gives us 30 -- defined on the monit script)
     while [ $(( $(date +%s) - 25 )) -lt $start ]; do
@@ -165,12 +177,21 @@ case $1 in
     ;;
 
   stop)
+    index=$2
+    job_name="rep-${index}"
+    if [ -z ${index} ]; then
+      index=0
+      job_name="rep"
+    fi
+
+    PIDFILE=$RUN_DIR/${job_name}.pid
+
     kill_and_wait $PIDFILE
 
     ;;
 
   *)
-    echo "Usage: rep_ctl {start|stop}"
+    echo "Usage: rep_ctl {start|stop} index"
 
     ;;
 
