--- a/jobs/benchmark-bbs/templates/run.erb
+++ b/jobs/benchmark-bbs/templates/run.erb
@@ -71,6 +71,9 @@ ginkgo -nodes=<%= p("benchmark-bbs.ginkgo_nodes") %> -- ${bbs_sec_flags} ${etcd_
   <% if_p("benchmark-bbs.sql.db_connection_string") do |value| %> \
     -databaseConnectionString='<%= value %>' \
   <% end %> \
+  <% if_p("benchmark-bbs.sql.db_driver") do |value| %> \
+    -databaseDriver='<%= value %>' \
+  <% end %> \
   <% if_p("benchmark-bbs.log_level") do |value| %> \
     -logLevel=<%= value %> \
   <% end %> \
