--- a/jobs/auctioneer/templates/auctioneer_as_vcap.erb
+++ b/jobs/auctioneer/templates/auctioneer_as_vcap.erb
@@ -23,7 +23,16 @@ export GODEBUG=netdns=cgo
   bbs_api_url="<%= "http://" + p("diego.auctioneer.bbs.api_location") %>"
 <% end %>
 
-/var/vcap/packages/auctioneer/bin/auctioneer ${bbs_sec_flags} \
+<% if p("diego.auctioneer.server_cert") %>
+  auctioneer_sec_flags=" \
+   -certFile=${CONF_DIR}/certs/server.crt \
+   -keyFile=${CONF_DIR}/certs/server.key \
+   -caFile=${CONF_DIR}/certs/ca.crt"
+<% else %>
+  auctioneer_sec_flags=""
+<% end %>
+
+/var/vcap/packages/auctioneer/bin/auctioneer ${bbs_sec_flags} ${auctioneer_sec_flags} \
       -bbsAddress=${bbs_api_url} \
       <% if_p("diego.auctioneer.bbs.client_session_cache_size") do |value| %> \
         -bbsClientSessionCacheSize=<%= value %> \
