--- a/jobs/rep/templates/rep_as_vcap.erb
+++ b/jobs/rep/templates/rep_as_vcap.erb
@@ -54,6 +54,11 @@ exec /var/vcap/packages/rep/bin/rep ${bbs_sec_flags} \
   -consulCluster=http://127.0.0.1:8500 \
   -debugAddr=<%= p("diego.rep.debug_addr") %> \
   -listenAddr=<%= p("diego.rep.listen_addr") %> \
+  -listenAddrSecurable=<%= p("diego.rep.listen_addr_securable") %> \
+  -requireTLS=<%= p("diego.rep.require_tls") %> \
+  -caCert=<%= p("diego.rep.ca_cert") %> \
+  -serverCert=<%= p("diego.rep.server_cert") %> \
+  -serverKey=<%= p("diego.rep.server_key") %> \
   <%= p("diego.rep.preloaded_rootfses").map { |rootfs| "-preloadedRootFS #{rootfs}" }.join(" ") %> \
   <%= p("diego.rep.rootfs_providers").map { |provider| "-rootFSProvider #{provider}" }.join(" ") %> \
   <%= p("diego.rep.placement_tags").map { |tag| "-placementTag #{Shellwords.shellescape(tag)}" }.join(" ") %> \
